--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ethereal-tech",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Shin Maung Maung<ethereal97@gmail.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -17,9 +17,9 @@
     "heroku-cleanup": ""
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/platform-express": "^8.4.4",
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
@@ -36,8 +36,8 @@
     "typeorm": "^0.3.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.10",
     "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
@@ -49,7 +49,7 @@
     "dotenv": "^16.0.0",
     "source-map-support": "^0.5.20",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.0.0",MIT
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   }
