--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dotenv": "^16.0.0",
     "source-map-support": "^0.5.20",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",MIT
+    "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   }
